--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "roots/bedrock",
+  "name": "andriilive/bedrock-extended",
   "type": "project",
   "license": "MIT",
-  "description": "WordPress boilerplate with Composer, easier configuration, and an improved folder structure",
-  "homepage": "https://roots.io/bedrock/",
+  "description": "Wordpress Bedrock Starter Extended by useful configuration and scripts",
+  "homepage": "https://github.com/roots/bedrock",
   "authors": [
     {
       "name": "Scott Walkinshaw",
@@ -14,6 +14,11 @@
       "name": "Ben Word",
       "email": "ben@benword.com",
       "homepage": "https://github.com/retlehs"
+    },
+    {
+      "name": "Andrii Iv. (@digitalandyeu)",
+      "email": "hi@digitalandy.eu",
+      "homepage": "https://github.com/andriilive"
     }
   ],
   "keywords": [
@@ -40,12 +45,21 @@
     "roots/wordpress": "6.3.2",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.1.0",
-    "wpackagist-theme/twentytwentythree": "^1.0",
-    "wp-graphql/wp-graphql-acf": "^0.6.1"
+    "wp-graphql/wp-graphql-acf": "^0.6.1",
+    "wpackagist-theme/twentytwentythree": "^1.2",
+    "wpackagist-plugin/wordpress-importer": "^0.8.1",
+    "wpackagist-plugin/wp-gatsby": "^2.3",
+    "wpackagist-plugin/wp-graphql": "^1.18",
+    "wpackagist-plugin/acf-extended": "0.8.9.4",
+    "aaemnnosttv/wp-cli-login-server": "^1.5",
+    "lukasbesch/bedrock-plugin-disabler": "^1.4",
+    "andriilive/wp-disable-generated-image-sizes": "dev-plugin",
+    "andriilive/wp-acf-extended-config": "dev-plugin"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "symfony/var-dumper": "^6.0"
   },
   "config": {
     "optimize-autoloader": true,
@@ -68,6 +82,28 @@
   "scripts": {
     "test": [
       "phpcs"
+    ],
+    "db:export": [
+      "wp db export --add-drop-table .db/db.sql"
+    ],
+    "login": [
+      "wp login create 1"
+    ],
+    "salts-shuffle": [
+      "wp dotenv salts regenerate"
+    ],
+    "media-regenerate": [
+      "wp media regenerate --yes"
+    ],
+    "log-empty": [
+      "echo '' > web/app/debug.log"
+    ],
+    "db-create": [
+      "wp db create",
+      "wp db import .db/db.sql"
+    ],
+    "env-localhost": [
+      "ln -s .env.example .env"
     ]
   }
 }
