--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,10 @@
   "repositories": [
     {
       "type": "composer",
+      "url": "https://pivvenit.github.io/acf-composer-bridge/composer/v3/wordpress-plugin"
+    },
+    {
+      "type": "composer",
       "url": "https://wpackagist.org",
       "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
     }
@@ -54,7 +58,8 @@
     "aaemnnosttv/wp-cli-login-server": "^1.5",
     "lukasbesch/bedrock-plugin-disabler": "^1.4",
     "andriilive/wp-disable-generated-image-sizes": "dev-plugin",
-    "andriilive/wp-acf-extended-config": "dev-plugin"
+    "andriilive/wp-acf-extended-config": "dev-plugin",
+    "advanced-custom-fields/advanced-custom-fields-pro": "^6.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
@@ -66,7 +71,8 @@
     "preferred-install": "dist",
     "allow-plugins": {
       "composer/installers": true,
-      "roots/wordpress-core-installer": true
+      "roots/wordpress-core-installer": true,
+      "pivvenit/acf-pro-installer": true
     }
   },
   "minimum-stability": "dev",
